deployments/epp/client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epp-client
  namespace: epp
  labels:
    app: epp-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: epp-client
  template:
    metadata:
      namespace: epp
      labels:
        app: epp-client
    spec:
      containers:
      - name: epp-client
        image: ghcr.io/elifesciences/enhanced-preprints-client:master-871c056f-20221007.1420 # {"$imagepolicy": "epp:epp-client"}
        command:
        - "sh"
        - "-c"
        - "yarn build && yarn start"
        ports:
        - containerPort: 3000
