deployments/epp/client/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: epp-client
  namespace: epp
spec:
  selector:
    app: epp-client
  ports:
  - port: 6006
