deployments/epp/client/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epp-client
  namespace: epp
spec:
  rules:
  - host: epp-client.elifesciences.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: epp-client
            port:
              number: 3000
